[gd_scene load_steps=13 format=3 uid="uid://canwr65tvu6fh"]

[ext_resource type="Script" path="res://Backend/Code/Levels/Level6.gd" id="1_gf5xr"]
[ext_resource type="Texture2D" uid="uid://dopfqygkv0cp8" path="res://Frontend/Recourses/GameStart.png" id="1_hbicd"]
[ext_resource type="Texture2D" uid="uid://0f6wmnlgh5fn" path="res://Frontend/Recourses/browser_13408985.png" id="2_e3pic"]
[ext_resource type="Texture2D" uid="uid://cgr1ruanqrx1b" path="res://Frontend/Recourses/wallpaper_monitor.png" id="3_hd27v"]
[ext_resource type="Texture2D" uid="uid://berhbt8ceajj5" path="res://Frontend/Recourses/mail_9068642.png" id="3_o1i45"]
[ext_resource type="Texture2D" uid="uid://wj75lcanwg0g" path="res://Frontend/Recourses/vpn_9694717.png" id="5_ea6tq"]
[ext_resource type="Texture2D" uid="uid://piktxiednwh" path="res://Frontend/Recourses/browser.png" id="6_4egyq"]
[ext_resource type="PackedScene" uid="uid://dkrkk78fdiww6" path="res://Frontend/Scenes/Instruments/Email.tscn" id="6_tjpyl"]
[ext_resource type="PackedScene" uid="uid://qxtpt0gymowq" path="res://Frontend/Scenes/Instruments/VPN.tscn" id="7_norh2"]
[ext_resource type="PackedScene" uid="uid://j1gaj4y3ktw1" path="res://Frontend/Scenes/Instruments/WorkChat.tscn" id="8_w63pu"]
[ext_resource type="PackedScene" uid="uid://csuhyqjgu6da8" path="res://Frontend/Scenes/Instruments/RecordApp.tscn" id="9_rqw2f"]
[ext_resource type="PackedScene" uid="uid://dpt2kcjnrcwgb" path="res://Frontend/Scenes/Instruments/Book.tscn" id="12_ty0dv"]

[node name="Level6" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gf5xr")

[node name="GameStart" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_hbicd")
expand_mode = 1

[node name="Book_Button" type="Button" parent="GameStart"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -251.0
offset_right = -130.0
offset_bottom = 47.0
grow_horizontal = 2
text = "Book"

[node name="Back_to_menu" type="Button" parent="GameStart"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -111.0
offset_bottom = 47.0
grow_horizontal = 0
text = "Menu"

[node name="Wallpaper" type="TextureRect" parent="GameStart"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0407986
anchor_top = 0.095679
anchor_right = 0.976563
anchor_bottom = 0.82716
texture = ExtResource("3_hd27v")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="GameStart/Wallpaper"]
layout_mode = 0
anchor_left = 0.00649351
anchor_top = 0.0168776
anchor_right = 0.0844156
anchor_bottom = 0.21097
flat = true
metadata/_edit_use_anchors_ = true

[node name="Browser13408985" type="Sprite2D" parent="GameStart/Wallpaper/Button"]
position = Vector2(42.5, 48.9346)
scale = Vector2(0.148926, 0.147537)
texture = ExtResource("2_e3pic")

[node name="Button2" type="Button" parent="GameStart/Wallpaper"]
layout_mode = 0
anchor_left = 0.00371058
anchor_top = 0.204641
anchor_right = 0.0779221
anchor_bottom = 0.373418
flat = true
metadata/_edit_use_anchors_ = true

[node name="Mail9068642" type="Sprite2D" parent="GameStart/Wallpaper/Button2"]
position = Vector2(45, 45)
scale = Vector2(0.151367, 0.143892)
texture = ExtResource("3_o1i45")

[node name="Button3" type="Button" parent="GameStart/Wallpaper"]
layout_mode = 0
anchor_left = 0.00742115
anchor_top = 0.386076
anchor_right = 0.0853432
anchor_bottom = 0.561181
flat = true
metadata/_edit_use_anchors_ = true

[node name="Browser" type="Sprite2D" parent="GameStart/Wallpaper/Button3"]
position = Vector2(40, 43)
scale = Vector2(0.161377, 0.153749)
texture = ExtResource("6_4egyq")

[node name="Button4" type="Button" parent="GameStart/Wallpaper"]
layout_mode = 0
anchor_left = 0.00649351
anchor_top = 0.561181
anchor_right = 0.0844156
anchor_bottom = 0.757384
flat = true
metadata/_edit_use_anchors_ = true

[node name="Vpn9694717" type="Sprite2D" parent="GameStart/Wallpaper/Button4"]
position = Vector2(42, 47)
scale = Vector2(0.150879, 0.142706)
texture = ExtResource("5_ea6tq")

[node name="List_of_tasks" type="Panel" parent="GameStart/Wallpaper"]
layout_mode = 0
anchor_left = 0.806122
anchor_top = 0.00843882
anchor_right = 1.00093
anchor_bottom = 0.434599
metadata/_edit_use_anchors_ = true

[node name="Color_List_of_tasks" type="ColorRect" parent="GameStart/Wallpaper/List_of_tasks"]
modulate = Color(0.870588, 0.870588, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text_List_of_task" type="TextEdit" parent="GameStart/Wallpaper/List_of_tasks"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0148515
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Task:
Open Email"
editable = false
metadata/_edit_use_anchors_ = true

[node name="Email" parent="GameStart/Wallpaper" instance=ExtResource("6_tjpyl")]
visible = false
layout_mode = 1

[node name="Vpn" parent="GameStart/Wallpaper" instance=ExtResource("7_norh2")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.739
anchor_top = 0.363
offset_left = 0.357971
offset_top = -0.0619965
offset_bottom = -1.0
metadata/_edit_use_anchors_ = true

[node name="WorkChat" parent="GameStart/Wallpaper" instance=ExtResource("8_w63pu")]
visible = false
layout_mode = 1

[node name="RecordApp" parent="GameStart/Wallpaper" instance=ExtResource("9_rqw2f")]
visible = false
layout_mode = 1

[node name="Book" parent="GameStart/Wallpaper" instance=ExtResource("12_ty0dv")]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00682189
anchor_top = -0.0995738
anchor_right = 1.10007
anchor_bottom = 1.27643
offset_left = 0.354
offset_top = 0.198002
offset_right = 0.12793
offset_bottom = -0.026062
metadata/_edit_use_anchors_ = true

[node name="Next_day" type="Button" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.840278
anchor_top = 0.686728
anchor_right = 0.97309
anchor_bottom = 0.773148
offset_bottom = 3.05176e-05
text = "Next Day"
metadata/_edit_use_anchors_ = true

[node name="GameOver" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="LineEdit" type="LineEdit" parent="GameOver"]
layout_mode = 0
offset_left = 308.0
offset_top = 179.0
offset_right = 877.0
offset_bottom = 244.0
text = "Game Over"
alignment = 1

[node name="LineEdit2" type="LineEdit" parent="GameOver"]
layout_mode = 0
offset_left = 406.0
offset_top = 265.0
offset_right = 767.0
offset_bottom = 296.0
text = "You mad to may mistakes"
alignment = 1

[node name="Exit" type="Button" parent="GameOver"]
layout_mode = 0
offset_left = 511.0
offset_top = 321.0
offset_right = 664.0
offset_bottom = 372.0
text = "Back to menu"

[node name="Show_text" type="TextEdit" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.266493
anchor_top = 0.589506
anchor_right = 0.736979
anchor_bottom = 0.70216
editable = false
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="GameStart/Book_Button" to="." method="_on_book_button_pressed"]
[connection signal="pressed" from="GameStart/Back_to_menu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="GameStart/Wallpaper/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GameStart/Wallpaper/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GameStart/Wallpaper/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="GameStart/Wallpaper/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Next_day" to="." method="_on_next_day_pressed"]
[connection signal="pressed" from="GameOver/Exit" to="." method="_on_exit_pressed"]
